<resources>
    <string name="app_name">AudioOrganizer</string>
    <string name="authorization">АВТОРИЗАЦИЯ</string>
    <string name="wave_image_description">Music Wave Image</string>
    <string name="login">ЛОГИН</string>
    <string name="hintlogin">anonymus123</string>
    <string name="search_hint">search</string>
    <string name="grey_panel">Grey panel</string>
    <string name="password">ПАРОЛЬ</string>
    <string name="forget_password">ЗАБЫЛИ ПАРОЛЬ?</string>
    <string name="green_button">Green button</string>
    <string name="enter">ВОЙТИ</string>
    <string name="yellow_button">Yellow button</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>
    <string name="recording">ЗАПИСЬ ЗВУКА</string>
    <string name="name_of_audio">НАЗВАНИЕ</string>
    <string name="timer">0:00</string>
    <string name="playing_tune">playing_tune</string>
    <string name="dialog_title">Переименовать</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отменить</string>
    <string name="go_back">go back</string>
    <string name="microphone">microphone</string>
    <string name="repeat_password">ПОВТОРИТЕ ПАРОЛЬ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="path_to_audio">ПУТЬ К АУДИО</string>
    <string name="audio_name">НАЗВАНИЕ АУДИО</string>
    <string name="choose_audio">ВЫБРАТЬ АУДИО</string>
    <string name="choose_file">ВЫБРАТЬ ФАЙЛ</string>
    <string name="whatsapp">ЗАЙТИ В WHATSAPP</string>
    <string name="choose_file_from_whatsapp">ВЫБРАТЬ ФАЙЛ</string>
    <string name="if_is_empty">Если будет пусто, то отобразите скрытые файлы</string>
</resources>