<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordAudioActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:rotation="180"
        android:contentDescription="@string/wave_image_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/colorwavesecond" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:background="@android:color/transparent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/go_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>

    <TextView
        android:id="@+id/textView"
        android:text="@string/recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/alegreyasansbold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#3D3D3D"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:text="@string/name_of_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="@font/alegreyasansbold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView"
        android:textColor="#3D3D3D"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/panel1"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/grey_panel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editAudioName"
        app:layout_constraintBottom_toBottomOf="@id/editAudioName"
        app:srcCompat="@drawable/button_panel" />

    <EditText
        android:id="@+id/editAudioName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="#D9D9D9"
        android:fontFamily="@font/alegreyasansrregular"
        android:hint="@string/hintlogin"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:textColor="#3D3D3D"
        android:textColorHint="#AAAAAA"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView1" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textColor="#3D3D3D"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/alegreyasansbold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editAudioName" />

    <ImageButton
        android:id="@+id/register"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/yellow_button" />

    <ImageView
        android:id="@+id/microphone"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="20dp"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:contentDescription="@string/microphone"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/microphone" />

</androidx.constraintlayout.widget.ConstraintLayout>